==== gedit 2.10.2 ====

2005-04-04  Paolo Borelli  <pborelli@katamail.com>

	* gedit2.c: fix leak in yesterday's focus patch.

2005-04-03  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-encodings-dialog.c: mark var as static, patch by
	Benoît Dejean.

2005-04-03  Paolo Borelli  <pborelli@katamail.com>

	* gedit-window-server.c:
	* gedit2.c: fix focus for the second and successive instances.

2005-04-03  Paolo Borelli  <pborelli@katamail.com>

	* gedit-application-server.c:
	* bonobo-mdi.c: make sure that active_window is set appropriately.

2005-04-03  Benoît Dejean  <TazForEver@dlfp.org>

	* gedit-languages-manager.c: (string_to_tag_style): Fixed a leak.

2005-04-02  Benoît Dejean  <TazForEver@dlfp.org>

	* gedit-document.c: (gedit_document_save_as_real):
	* gedit-print.c: (save_gedit_print_config_to_file): Fixed write () usage.
	write () returns a ssize_t which is signed.
	
	* gedit-mdi.c: (get_dirname): Removed unneeded and unsafe
	g_return_val_if_fail ().

==== gedit 2.10.1 ====

2005-03-25  Paolo Borelli  <pborelli@katamail.com>

	* gedit/GNOME_Gedit.idl:
	* gedit/gedit-window-server.c:
	* gedit/gedit2.c:

	Always open a new document if the current one is not untouched.

2005-03-08  Paolo Borelli  <pborelli@katamail.com>

	* gedit/GNOME_Gedit.idl:
	* gedit/bonobo-mdi.c:
	* gedit/gedit-application-server.c:
	* gedit/gedit-utils.c:
	* gedit/gedit-utils.h:
	* gedit/gedit2.c:

	When launching gedit check if there is already a gedit window on the 
	current workspace: if yes, open the the document there, otherwise 
	create a new window.

==== gedit 2.10.0 ====

==== gedit 2.9.7 ====

2005-02-27  Paolo Maggi  <paolo@gnome.org>

	* gedit-document.c (update_document_contents): fixes bug #167867 (Autosave
	should not save unmodified files). Call gedit_document_set_readonly after
	gedit_document_set_uri to activate autosaving also if the document has never
	been saved before.

	* gedit-encodings.c (gedit_encoding_to_string)