@@ -1,5 +1,10 @@
 ==== gedit 2.10.2 ====
 
+2005-04-04  Paolo Maggi  <paolo@gnome.org>
+
+	* gedit2.c (gedit_handle_automation): does not free data and
+	data->file_list before reading them.
+
 2005-04-04  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit2.c: fix leak in yesterday's focus patch.
